Added transcoder API & it's docs
