# swagger.json
@@ -27,9 +27,43 @@
 						}
 					}
 				}
-
 			}
 		},
+	"/files/transcode": {
+		"post": {
+			"tags": ["Files"],
+			"description": "transcodes a file into a given format.",
+			"consumes": "multipart/form-data",
+			"parameters": [
+				{
+					"name": "file",
+					"description": "File to transcode",
+					"type": "file",
+					"required": true,
+					"in": "formData"
+				},
+				{
+					"name": "format",
+					"description": "format to convert to",
+					"type": "string",
+					"required": true,
+					"in": "formData"
+				}
+			],
+			"responses": {
+				"200": {
+					"description": "OK",
+					"schema": {
+						"properties": {
+							"file": {
+								"type": "file"
+							}
+						}
+					}
+				}
+			}
+		}
+	},
 		"/files/info": {
 			"get": {
 				"tags": ["Files"],
